[gd_scene load_steps=27 format=3 uid="uid://df2ea0vg5h3uu"]

[ext_resource type="Script" uid="uid://psep8bik5dtg" path="res://enemies/new_ogre.gd" id="1_rhjej"]
[ext_resource type="Texture2D" uid="uid://3a687kinvsnw" path="res://Assets/Steph Assets/ogre-all.png" id="2_oakbg"]
[ext_resource type="Script" uid="uid://ycwuextjgxk6" path="res://enemies/club_area.gd" id="3_oakbg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pqpy8"]
atlas = ExtResource("2_oakbg")
region = Rect2(0, 160, 144, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_pmg8o"]
atlas = ExtResource("2_oakbg")
region = Rect2(144, 160, 144, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_wht3x"]
atlas = ExtResource("2_oakbg")
region = Rect2(288, 160, 144, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ikhlq"]
atlas = ExtResource("2_oakbg")
region = Rect2(432, 160, 144, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_cr17t"]
atlas = ExtResource("2_oakbg")
region = Rect2(576, 160, 144, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_6nhn7"]
atlas = ExtResource("2_oakbg")
region = Rect2(720, 160, 144, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7kvt"]
atlas = ExtResource("2_oakbg")
region = Rect2(864, 160, 144, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_jsrhc"]
atlas = ExtResource("2_oakbg")
region = Rect2(1008, 160, 144, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_pghys"]
atlas = ExtResource("2_oakbg")
region = Rect2(0, 80, 144, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_4nqng"]
atlas = ExtResource("2_oakbg")
region = Rect2(144, 80, 144, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ab1y"]
atlas = ExtResource("2_oakbg")
region = Rect2(288, 80, 144, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ihpbx"]
atlas = ExtResource("2_oakbg")
region = Rect2(432, 80, 144, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_86arj"]
atlas = ExtResource("2_oakbg")
region = Rect2(0, 0, 144, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_klxre"]
atlas = ExtResource("2_oakbg")
region = Rect2(144, 0, 144, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_2e8hd"]
atlas = ExtResource("2_oakbg")
region = Rect2(288, 0, 144, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_y1e58"]
atlas = ExtResource("2_oakbg")
region = Rect2(432, 0, 144, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_rcgun"]
atlas = ExtResource("2_oakbg")
region = Rect2(576, 0, 144, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_as0y5"]
atlas = ExtResource("2_oakbg")
region = Rect2(720, 0, 144, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_j1rwr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqpy8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pmg8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wht3x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikhlq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cr17t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nhn7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7kvt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jsrhc")
}],
"loop": true,
"name": &"attack",
"speed": 8.0
}, {
"frames": [],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pghys")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4nqng")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ab1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ihpbx")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_86arj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_klxre")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2e8hd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y1e58")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rcgun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_as0y5")
}],
"loop": true,
"name": &"walk",
"speed": 9.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ds0pv"]
radius = 24.0
height = 62.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rhjej"]
radius = 23.0
height = 58.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rhjej"]
size = Vector2(945, 327.625)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oakbg"]
size = Vector2(138.375, 20)

[node name="NewOgre" type="CharacterBody2D"]
script = ExtResource("1_rhjej")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -40)
sprite_frames = SubResource("SpriteFrames_j1rwr")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -32)
shape = SubResource("CapsuleShape2D_ds0pv")
debug_color = Color(1, 1, 1, 0.42)

[node name="DirectionTimer" type="Timer" parent="."]
autostart = true

[node name="EnemyHitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHitbox"]
position = Vector2(-1, -32)
shape = SubResource("CapsuleShape2D_rhjej")

[node name="AggroRange" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AggroRange"]
position = Vector2(0, -163.188)
shape = SubResource("RectangleShape2D_rhjej")
debug_color = Color(0.592703, 0.518819, 0.480166, 0.42)

[node name="ClubArea" type="Area2D" parent="." groups=["Enemy"]]
collision_layer = 4
collision_mask = 2
script = ExtResource("3_oakbg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClubArea"]
position = Vector2(0, -32)
shape = SubResource("RectangleShape2D_oakbg")
debug_color = Color(0.969981, 0.147852, 0.235917, 0.42)

[node name="HitTimer" type="Timer" parent="ClubArea"]

[connection signal="timeout" from="DirectionTimer" to="." method="_on_direction_timer_timeout"]
[connection signal="area_entered" from="EnemyHitbox" to="." method="_on_enemy_hitbox_area_entered"]
[connection signal="area_entered" from="AggroRange" to="." method="_on_aggro_range_area_entered"]
[connection signal="area_entered" from="ClubArea" to="ClubArea" method="_on_area_entered"]
[connection signal="area_exited" from="ClubArea" to="ClubArea" method="_on_club_area_area_exited"]
[connection signal="body_exited" from="ClubArea" to="ClubArea" method="_on_body_exited"]
[connection signal="timeout" from="ClubArea/HitTimer" to="ClubArea" method="_on_hit_timer_timeout"]
